src/snapshots/hydra__ui__tests__confirm_delete_modal.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ┐┌ doomed-session ──────────────────────────────────────────────┐
│── ●  Idle    ││                                                              │
│>> ● doomed-se││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││   ┌ Confirm Delete ──────────────────────┐                   │
│              ││   │ Kill session 'doomed-session'? (y/n) │                   │
│              ││   │                                      │                   │
│              ││   │                                      │                   │
│              ││   └──────────────────────────────────────┘                   │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 y: confirm delete  Esc: cancel
