src/snapshots/hydra__ui__tests__confirm_delete_no_sessions.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (0) ┐┌ Preview ─────────────────────────────────────────────────────┐
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││   ┌ Confirm Delete ──────────────────────┐                   │
│              ││   │ Kill session '?'? (y/n)              │                   │
│              ││   │                                      │                   │
│              ││   │                                      │                   │
│              ││   └──────────────────────────────────────┘                   │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 y: confirm delete  Esc: cancel
