src/snapshots/hydra__ui__tests__conversation_basic.snap
---
source: src/ui.rs
assertion_line: 1533
expression: rendered
---
USER
  Fix the bug

ASSISTANT
  I'll fix that for you.

TOOL
  Edit
  id=t1 | file=src/main.rs

TOOL RESULT
  - src/main.rs
  > updated file successfully

ASSISTANT
  Done! The bug is fixed.
