src/snapshots/hydra__ui__tests__conversation_tool_heavy.snap
---
source: src/ui.rs
assertion_line: 1585
expression: rendered
---
USER
  Refactor the module

ASSISTANT
  Let me read the files first.

TOOL
  Read
  path=src/app.rs

TOOL RESULT
  - src/app.rs

TOOL
  Read
  path=src/ui.rs

TOOL RESULT
  - src/ui.rs

TOOL
  Edit
  id=t3 | file=src/app.rs

TOOL RESULT
  - src/app.rs
  - src/ui.rs
  > 2 files modified

ASSISTANT
  Refactoring complete.
