src/snapshots/hydra__ui__tests__conversation_with_unparsed_logs.snap
---
source: src/ui.rs
assertion_line: 1615
expression: rendered
---
USER
  show me diagnostics

SUBAGENT
  enqueue (task-1)

UNPARSED JSONL
  [Malformed JSONL] {"type":"assistant" BROKEN
