src/snapshots/hydra__ui__tests__new_session_agent_modal.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (0) ┐┌ Preview ─────────────────────────────────────────────────────┐
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││        ┌ Select Agent ──────────────┐                        │
│              ││        │>> Claude                   │                        │
│              ││        │   Codex                    │                        │
│              ││        └────────────────────────────┘                        │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: select agent  Enter: confirm  Esc: cancel
