src/snapshots/hydra__ui__tests__new_session_name_modal.snap
---
source: src/ui.rs
assertion_line: 309
expression: output
---
┌ Sessions (0) ────────┐┌ Preview ─────────────────────────────────────────────┐
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                   ┌ New Session Name ────────────────────┐                   │
│                   │ > my-session_                        │                   │
│                   │                                      │                   │
│                   │                                      │                   │
│                   └──────────────────────────────────────┘                   │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 Enter: confirm  Esc: cancel
