src/snapshots/hydra__ui__tests__preview_scrolling_renders.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ┐┌ s1 ──────────────────────────────────────────────────────────┐
│── ●  Idle    ││line 19                                                       │
│>> ● s1 [Claud││line 20                                                       │
│              ││line 21                                                       │
│              ││line 22                                                       │
│              ││line 23                                                       │
│              ││line 24                                                       │
│              ││line 25                                                       │
│              ││line 26                                                       │
│              ││line 27                                                       │
│              ││line 28                                                       │
│              ││line 29                                                       │
│              ││line 30                                                       │
│              ││line 31                                                       │
│              ││line 32                                                       │
│              ││line 33                                                       │
│              ││line 34                                                       │
│              ││line 35                                                       │
│              ││line 36                                                       │
│              ││line 37                                                       │
│              ││line 38                                                       │
│              ││line 39                                                       │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: nav  PgUp/Dn: scroll  Enter: compose  n: new  d: del  c: copy  q: quit
